fixes spacing between header and subheader

--- a/www/style.css
+++ b/www/style.css
@@ -90,6 +90,10 @@ h3 {
   margin-bottom: 10px;
 }
 
+.game-events__game-subheader {
+  margin-top: 10px;
+}
+
 .game-events__header {
   background-color: #003049;
   width: 100%;
